--- a/css/styles.css
+++ b/css/styles.css
@@ -23,23 +23,23 @@ body img {
   display: block;
 }
 
-.header {
+.header-main {
   display: flex;
   justify-content: center;
   border-bottom: 1px solid #e7e9fc;
 }
-.header .container {
+.header-main .container {
   display: flex;
   justify-content: space-between;
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
 }
-.header .container .nav {
+.header-main .container .nav {
   display: flex;
   align-items: center;
 }
-.header .container .nav .logo {
+.header-main .container .nav .logo {
   color: #4D5AE5;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -50,15 +50,15 @@ body img {
   margin-right: 76px;
   padding: 24px 0;
 }
-.header .container .nav .logo .logostudio {
+.header-main .container .nav .logo .logostudio {
   color: #2E2F42;
 }
-.header .container .nav .list {
+.header-main .container .nav .list {
   display: flex;
   margin-left: 76px;
   gap: 40px;
 }
-.header .container .nav .list .section {
+.header-main .container .nav .list .section {
   color: #2E2F42;
   font-weight: 500;
   font-size: 16px;
@@ -66,19 +66,19 @@ body img {
   letter-spacing: 0.02em;
   padding: 24px 0;
 }
-.header .container .nav .list .section:hover, .header .container .nav .list .section focus {
+.header-main .container .nav .list .section:hover, .header-main .container .nav .list .section focus {
   color: #404BBF;
 }
-.header .container .address {
+.header-main .container .address {
   font-style: normal;
   display: flex;
   align-items: center;
 }
-.header .container .address .list {
+.header-main .container .address .list {
   display: flex;
   gap: 40px;
 }
-.header .container .address .list .contacts {
+.header-main .container .address .list .contacts {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -86,7 +86,7 @@ body img {
   color: #434455;
   padding: 24px 0;
 }
-.header .container .address .list .contacts:hover, .header .container .address .list .contacts focus {
+.header-main .container .address .list .contacts:hover, .header-main .container .address .list .contacts focus {
   color: #404BBF;
 }
 
@@ -203,7 +203,6 @@ body img {
   flex-direction: column;
   align-items: center;
   border-radius: 0px 0px 4px 4px;
-  flex-basis: calc((100% - 72px) / 4);
 }
 .main .team-section .container .list .card .container {
   padding: 32px 0;
@@ -247,9 +246,6 @@ body img {
   gap: 24px;
   row-gap: 48px;
   justify-content: center;
-}
-.main .portfolio-section .container .list .card {
-  flex-basis: calc((100% - 48px) / 3);
 }
 .main .portfolio-section .container .list .card .container {
   padding: 32px 16px;
