--- a/css/styles.scss
+++ b/css/styles.scss
@@ -29,7 +29,7 @@ body {
 
 }
 
-.header {
+.header-main{
   display: flex;
   justify-content: center;
   border-bottom: 1px solid #e7e9fc;
@@ -239,7 +239,6 @@ body {
           flex-direction: column;
           align-items: center;
           border-radius: 0px 0px 4px 4px;
-          flex-basis: calc((100% - 72px) / 4);
 
           .container {
             padding: 32px 0;
@@ -294,7 +293,6 @@ body {
         justify-content: center;
 
         .card {
-          flex-basis: calc((100% - 48px) / 3);
 
           .container {
             padding: 32px 16px;
