--- a/css/styles.scss
+++ b/css/styles.scss
@@ -328,8 +328,9 @@ body {
   padding: 100px 0;
 
   .container {
-
-    padding: 0 120px;
+    width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
 
     .logo {
       display: inline-block;
@@ -358,6 +359,7 @@ body {
     }
   }
 }
+
 
 
 
