--- a/css/styles.scss
+++ b/css/styles.scss
@@ -67,6 +67,7 @@ body {
         gap: 40px;
 
         .section {
+          position: relative;
           color: #2E2F42;
           font-weight: 500;
           font-size: 16px;
@@ -74,9 +75,25 @@ body {
           letter-spacing: 0.02em;
           padding: 24px 0;
 
+
           &:hover, focus {
             color: #404BBF;
           }
+        }
+        .section::after{
+          position: absolute;
+          content: "";
+          width: 100%;
+          height: 4px;
+          background-color: transparent;
+          left:0;
+          bottom: 0;
+          border-radius: 4px;
+          transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .section:hover::after{
+          background-color: #404BBF;
         }
       }
     }
@@ -111,6 +128,11 @@ body {
 
 .main {
   .section-hero {
+    background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+            url(../images/people-office.png);
+    background-repeat: no-repeat;
+    background-size: 1440px auto;
+    background-position: center center;
     background-color: #2E2F42;
     display: flex;
     justify-content: center;
@@ -148,9 +170,12 @@ body {
         border-radius: 4px;
         min-width: 169px;
         height: 56px;
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-        &:hover, focus {
-          color: #404BBF;
+        &:hover,
+        &:focus {
+          background-color: #404BBF;
         }
       }
     }
@@ -184,6 +209,25 @@ body {
 
         .item {
           flex-basis: calc((100% - 72px) / 4);
+
+          .box {
+            position: relative;
+            width: 100%;
+            height: 112px;
+            border: 1px solid #8E8F99;
+            border-radius: 4px;
+            background-color: #F4F4FD;
+            margin-bottom: 8px;
+
+            .icon {
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              width: 64px;
+              height: 64px;
+              transform: translate(-50%, -50%);
+            }
+          }
 
           .header {
             color: #2E2F42;
@@ -239,6 +283,7 @@ body {
           flex-direction: column;
           align-items: center;
           border-radius: 0px 0px 4px 4px;
+          box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 
           .container {
             padding: 32px 0;
@@ -258,6 +303,28 @@ body {
               line-height: 1.5;
               letter-spacing: 0.02em;
               text-align: center;
+              margin-bottom: 8px;
+            }
+            .box{
+              display: flex;
+              gap: 24px;
+
+              .item {
+                width: 40px;
+                height: 40px;
+                background-color: #4D5AE5;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 50%;
+                transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+                &:hover,
+                &:focus{
+                  background-color: #404BBF;
+
+                }
+              }
             }
           }
         }
@@ -293,6 +360,33 @@ body {
         justify-content: center;
 
         .card {
+
+          &:hover,
+          &:focus{
+            box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+         cursor: pointer;
+          }
+
+          .box{
+            position: relative;
+            overflow: hidden;
+          }
+
+          .box::after{
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: #4D5AE5;
+            top: 0;
+            left: 0;
+            transform: translateY(100%);
+            transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+          }
+
+          .box:hover::after{
+            transform: translateY(0);
+          }
 
           .container {
             padding: 32px 16px;
@@ -331,31 +425,72 @@ body {
     width: 1158px;
     padding: 0 15px;
     margin: 0 auto;
+    display: flex;
 
-    .logo {
-      display: inline-block;
-      font-family: "Raleway", sans-serif;
-      color: #4D5AE5;
-      font-weight: 700;
-      font-size: 18px;
-      line-height: 1.17;
-      letter-spacing: 0.03em;
-      text-transform: uppercase;
-      margin-bottom: 16px;
+    .content {
+      margin-right: 120px;
 
-      .logo-studio {
-        color: #F4F4FD;
+      .logo {
         display: inline-block;
+        font-family: "Raleway", sans-serif;
+        color: #4D5AE5;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 1.17;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        margin-bottom: 16px;
+
+        .logo-studio {
+          color: #F4F4FD;
+          display: inline-block;
+        }
+      }
+
+      .paragrph {
+        color: #F4F4FD;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        text-align: left;
+        max-width: 264px;
       }
     }
 
-    .paragrph {
-      color: #F4F4FD;
-      font-size: 16px;
-      line-height: 1.5;
-      letter-spacing: 0.02em;
-      text-align: left;
-      max-width: 264px;
+    .social {
+      justify-content: flex-start;
+
+      .paragraph{
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 150%;
+        letter-spacing: 0.02em;
+        color: #FFFFFF;
+        margin-bottom: 8px;
+      }
+
+      .box {
+        display: flex;
+        gap: 16px;
+        align-items: center;
+
+        .item {
+          width: 40px;
+          height: 40px;
+          background-color: #4D5AE5;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          border-radius: 50%;
+          transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+          &:hover,
+          &:focus {
+            background-color: #31D0AA;
+
+          }
+        }
+      }
     }
   }
 }
