--- a/css/styles.css
+++ b/css/styles.css
@@ -323,9 +323,6 @@ body img {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.main .portfolio-section .container .list .card .box:hover::after {
-  transform: translateY(0);
-}
 .main .portfolio-section .container .list .card .container {
   padding: 32px 16px;
   border-bottom: 1px solid #E7E9FC;
@@ -345,6 +342,9 @@ body img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+.main .portfolio-section .container .list .card:hover .box::after {
+  transform: translateY(0);
 }
 
 .footer {
