--- a/css/styles.scss
+++ b/css/styles.scss
@@ -384,10 +384,6 @@ body {
             transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
           }
 
-          .box:hover::after{
-            transform: translateY(0);
-          }
-
           .container {
             padding: 32px 16px;
             border-bottom: 1px solid #E7E9FC;
@@ -410,6 +406,9 @@ body {
               letter-spacing: 0.02em;
             }
           }
+        }
+        .card:hover .box::after{
+          transform: translateY(0);
         }
       }
     }
