--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ body img {
 }
 
 .main .section-hero {
-  background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.png);
+  background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
   background-repeat: no-repeat;
   background-size: 1440px auto;
   background-position: center center;
