--- a/css/styles.scss
+++ b/css/styles.scss
@@ -129,7 +129,7 @@ body {
 .main {
   .section-hero {
     background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-            url(../images/people-office.png);
+            url(../images/people-office.jpg);
     background-repeat: no-repeat;
     background-size: 1440px auto;
     background-position: center center;
