--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ body img {
   display: flex;
   justify-content: center;
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-main .container {
   display: flex;
@@ -66,6 +67,7 @@ body img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-main .container .nav .list .section:hover, .header-main .container .nav .list .section focus {
   color: #404BBF;
@@ -73,16 +75,16 @@ body img {
 .header-main .container .nav .list .section::after {
   position: absolute;
   content: "";
-  width: 100%;
+  width: 0;
   height: 4px;
-  background-color: transparent;
+  background-color: #404BBF;
   left: 0;
   bottom: 0;
-  border-radius: 4px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-radius: 2px;
+  transition: width 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-main .container .nav .list .section:hover::after {
-  background-color: #404BBF;
+  width: 100%;
 }
 .header-main .container .address {
   font-style: normal;
@@ -100,6 +102,7 @@ body img {
   letter-spacing: 0.02em;
   color: #434455;
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-main .container .address .list .contacts:hover, .header-main .container .address .list .contacts focus {
   color: #404BBF;
