--- a/css/styles.scss
+++ b/css/styles.scss
@@ -33,6 +33,7 @@ body {
   display: flex;
   justify-content: center;
   border-bottom: 1px solid #e7e9fc;
+  box-shadow:  0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 
   .container {
     display: flex;
@@ -74,6 +75,7 @@ body {
           line-height: 1.5;
           letter-spacing: 0.02em;
           padding: 24px 0;
+          transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
           &:hover, focus {
@@ -83,17 +85,18 @@ body {
         .section::after{
           position: absolute;
           content: "";
-          width: 100%;
+          width: 0;
           height: 4px;
-          background-color: transparent;
+          background-color: #404BBF;
           left:0;
           bottom: 0;
-          border-radius: 4px;
-          transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+          border-radius: 2px;
+          transition: width 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
 
         .section:hover::after{
-          background-color: #404BBF;
+          width: 100%;
+
         }
       }
     }
@@ -114,6 +117,7 @@ body {
           letter-spacing: 0.02em;
           color: #434455;
           padding: 24px 0;
+          transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
           &:hover, focus {
             color: #404BBF;
