--- a/css/styles.css
+++ b/css/styles.css
@@ -72,19 +72,19 @@ body img {
 .header-main .container .nav .list .section:hover, .header-main .container .nav .list .section focus {
   color: #404BBF;
 }
-.header-main .container .nav .list .section::after {
+.header-main .container .nav .list .active {
+  color: #404bbf;
+}
+.header-main .container .nav .list .active::after {
   position: absolute;
   content: "";
-  width: 0;
+  width: 100%;
   height: 4px;
   background-color: #404BBF;
   left: 0;
   bottom: 0;
   border-radius: 2px;
   transition: width 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.header-main .container .nav .list .section:hover::after {
-  width: 100%;
 }
 .header-main .container .address {
   font-style: normal;
@@ -111,12 +111,13 @@ body img {
 .main .section-hero {
   background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
   background-repeat: no-repeat;
-  background-size: 1440px auto;
+  background-size: cover;
   background-position: center center;
   background-color: #2E2F42;
   display: flex;
   justify-content: center;
   padding: 188px 0;
+  max-width: 1440px;
 }
 .main .section-hero .container {
   display: flex;
