--- a/css/styles.scss
+++ b/css/styles.scss
@@ -82,21 +82,20 @@ body {
             color: #404BBF;
           }
         }
-        .section::after{
+
+        .active{
+          color: #404bbf;
+        }
+        .active::after{
           position: absolute;
           content: "";
-          width: 0;
+          width: 100%;
           height: 4px;
           background-color: #404BBF;
           left:0;
           bottom: 0;
           border-radius: 2px;
           transition: width 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
-
-        .section:hover::after{
-          width: 100%;
-
         }
       }
     }
@@ -135,12 +134,13 @@ body {
     background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
             url(../images/people-office.jpg);
     background-repeat: no-repeat;
-    background-size: 1440px auto;
+    background-size: cover;
     background-position: center center;
     background-color: #2E2F42;
     display: flex;
     justify-content: center;
     padding: 188px 0;
+    max-width: 1440px;
 
 
     .container {
