--- a/css/styles.css
+++ b/css/styles.css
@@ -182,21 +182,15 @@ body img {
   flex-basis: calc((100% - 72px) / 4);
 }
 .main .second-section .container .list .item .box {
-  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 112px;
   border: 1px solid #8E8F99;
   border-radius: 4px;
   background-color: #F4F4FD;
   margin-bottom: 8px;
-}
-.main .second-section .container .list .item .box .icon {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 64px;
-  height: 64px;
-  transform: translate(-50%, -50%);
 }
 .main .second-section .container .list .item .header {
   color: #2E2F42;
@@ -269,19 +263,27 @@ body img {
 .main .team-section .container .list .card .container .box {
   display: flex;
   gap: 24px;
+  justify-content: center;
 }
 .main .team-section .container .list .card .container .box .item {
   width: 40px;
   height: 40px;
-  background-color: #4D5AE5;
+}
+.main .team-section .container .list .card .container .box .item .item-link {
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #4D5AE5;
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.main .team-section .container .list .card .container .box .item:hover, .main .team-section .container .list .card .container .box .item:focus {
+.main .team-section .container .list .card .container .box .item .item-link:hover, .main .team-section .container .list .card .container .box .item .item-link:focus {
   background-color: #404BBF;
+}
+.main .team-section .container .list .card .container .box .item .item-link .icon {
+  fill: #f4f4fd;
 }
 .main .portfolio-section {
   display: flex;
