--- a/css/styles.scss
+++ b/css/styles.scss
@@ -215,7 +215,9 @@ body {
           flex-basis: calc((100% - 72px) / 4);
 
           .box {
-            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             width: 100%;
             height: 112px;
             border: 1px solid #8E8F99;
@@ -223,14 +225,6 @@ body {
             background-color: #F4F4FD;
             margin-bottom: 8px;
 
-            .icon {
-              position: absolute;
-              top: 50%;
-              left: 50%;
-              width: 64px;
-              height: 64px;
-              transform: translate(-50%, -50%);
-            }
           }
 
           .header {
@@ -312,21 +306,29 @@ body {
             .box{
               display: flex;
               gap: 24px;
+              justify-content: center;
 
               .item {
                 width: 40px;
                 height: 40px;
-                background-color: #4D5AE5;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                border-radius: 50%;
-                transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-                &:hover,
-                &:focus{
-                  background-color: #404BBF;
+                .item-link{
+                  width: 100%;
+                  height: 100%;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  background-color: #4D5AE5;
+                  border-radius: 50%;
+                  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+                  &:hover,
+                  &:focus{
+                    background-color: #404BBF;
+                  }
+                  .icon{
+                    fill: #f4f4fd;
+                  }
                 }
               }
             }
