--- a/css/styles.css
+++ b/css/styles.css
@@ -362,6 +362,7 @@ body img {
   padding: 0 15px;
   margin: 0 auto;
   display: flex;
+  align-items: baseline;
 }
 .footer .container .content {
   margin-right: 120px;
@@ -408,15 +409,22 @@ body img {
 .footer .container .social .box .item {
   width: 40px;
   height: 40px;
-  background-color: #4D5AE5;
+}
+.footer .container .social .box .item .item-link {
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #4D5AE5;
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer .container .social .box .item:hover, .footer .container .social .box .item:focus {
-  background-color: #31D0AA;
+.footer .container .social .box .item .item-link:hover, .footer .container .social .box .item .item-link:focus {
+  background-color: #31d0aa;
+}
+.footer .container .social .box .item .item-link .icon {
+  fill: #f4f4fd;
 }
 
 /*# sourceMappingURL=styles.css.map */
