--- a/css/styles.scss
+++ b/css/styles.scss
@@ -431,6 +431,7 @@ body {
     padding: 0 15px;
     margin: 0 auto;
     display: flex;
+    align-items: baseline;
 
     .content {
       margin-right: 120px;
@@ -482,17 +483,24 @@ body {
         .item {
           width: 40px;
           height: 40px;
-          background-color: #4D5AE5;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          border-radius: 50%;
-          transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-          &:hover,
-          &:focus {
-            background-color: #31D0AA;
+          .item-link{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #4D5AE5;
+            border-radius: 50%;
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+            &:hover,
+            &:focus{
+              background-color: #31d0aa;
+            }
+            .icon{
+              fill: #f4f4fd;
+            }
           }
         }
       }
