--- a/css/styles.css
+++ b/css/styles.css
@@ -310,6 +310,9 @@ body img {
   row-gap: 48px;
   justify-content: center;
 }
+.main .portfolio-section .container .list .card {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .main .portfolio-section .container .list .card:hover, .main .portfolio-section .container .list .card:focus {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   cursor: pointer;
@@ -318,8 +321,7 @@ body img {
   position: relative;
   overflow: hidden;
 }
-.main .portfolio-section .container .list .card .box::after {
-  content: "";
+.main .portfolio-section .container .list .card .box .description-box {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -327,7 +329,15 @@ body img {
   top: 0;
   left: 0;
   transform: translateY(100%);
+  padding: 40px 32px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.main .portfolio-section .container .list .card .box .description-box .description {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  color: #F4F4FD;
 }
 .main .portfolio-section .container .list .card .container {
   padding: 32px 16px;
@@ -349,7 +359,7 @@ body img {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-.main .portfolio-section .container .list .card:hover .box::after {
+.main .portfolio-section .container .list .card:hover .description-box {
   transform: translateY(0);
 }
 
@@ -399,7 +409,7 @@ body img {
   line-height: 150%;
   letter-spacing: 0.02em;
   color: #FFFFFF;
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 .footer .container .social .box {
   display: flex;
