--- a/css/styles.scss
+++ b/css/styles.scss
@@ -366,6 +366,7 @@ body {
         justify-content: center;
 
         .card {
+          transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
           &:hover,
           &:focus{
@@ -373,21 +374,30 @@ body {
          cursor: pointer;
           }
 
-          .box{
+
+          .box {
             position: relative;
             overflow: hidden;
-          }
 
-          .box::after{
-            content: "";
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background-color: #4D5AE5;
-            top: 0;
-            left: 0;
-            transform: translateY(100%);
-            transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            .description-box {
+              position: absolute;
+              width: 100%;
+              height: 100%;
+              background-color: #4D5AE5;
+              top: 0;
+              left: 0;
+              transform: translateY(100%);
+              padding:40px 32px;
+             transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+              .description {
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 150%;
+                letter-spacing: 0.02em;
+                color: #F4F4FD;
+              }
+            }
           }
 
           .container {
@@ -413,7 +423,7 @@ body {
             }
           }
         }
-        .card:hover .box::after{
+        .card:hover .description-box {
           transform: translateY(0);
         }
       }
@@ -472,7 +482,7 @@ body {
         line-height: 150%;
         letter-spacing: 0.02em;
         color: #FFFFFF;
-        margin-bottom: 8px;
+        margin-bottom: 16px;
       }
 
       .box {
