--- a/css/styles.css
+++ b/css/styles.css
@@ -321,7 +321,7 @@ body img {
   position: relative;
   overflow: hidden;
 }
-.main .portfolio-section .container .list .card .box .description-box {
+.main .portfolio-section .container .list .card .box .description {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -329,15 +329,13 @@ body img {
   top: 0;
   left: 0;
   transform: translateY(100%);
-  padding: 40px 32px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.main .portfolio-section .container .list .card .box .description-box .description {
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.02em;
   color: #F4F4FD;
+  padding: 40px 32px;
 }
 .main .portfolio-section .container .list .card .container {
   padding: 32px 16px;
@@ -359,7 +357,7 @@ body img {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-.main .portfolio-section .container .list .card:hover .description-box {
+.main .portfolio-section .container .list .card:hover .description {
   transform: translateY(0);
 }
 
