--- a/css/styles.scss
+++ b/css/styles.scss
@@ -379,24 +379,22 @@ body {
             position: relative;
             overflow: hidden;
 
-            .description-box {
-              position: absolute;
-              width: 100%;
-              height: 100%;
-              background-color: #4D5AE5;
-              top: 0;
-              left: 0;
-              transform: translateY(100%);
-              padding:40px 32px;
-              transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-              .description {
+            .description {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                background-color: #4D5AE5;
+                top: 0;
+                left: 0;
+                transform: translateY(100%);
+                transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
                 font-weight: 400;
                 font-size: 16px;
                 line-height: 150%;
                 letter-spacing: 0.02em;
                 color: #F4F4FD;
-              }
+                padding: 40px 32px;
             }
           }
 
@@ -423,7 +421,7 @@ body {
             }
           }
         }
-        .card:hover .description-box {
+        .card:hover .description {
           transform: translateY(0);
         }
       }
