--- a/css/styles.css
+++ b/css/styles.css
@@ -321,7 +321,7 @@ body img {
   position: relative;
   overflow: hidden;
 }
-.main .portfolio-section .container .list .card .box .description {
+.main .portfolio-section .container .list .card .box .paragraph {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -357,7 +357,7 @@ body img {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
-.main .portfolio-section .container .list .card:hover .description {
+.main .portfolio-section .container .list .card:hover .paragraph {
   transform: translateY(0);
 }
 
