--- a/css/styles.scss
+++ b/css/styles.scss
@@ -380,7 +380,7 @@ body {
             overflow: hidden;
 
 
-            .description {
+            .paragraph {
                 position: absolute;
                 width: 100%;
                 height: 100%;
@@ -421,7 +421,7 @@ body {
             }
           }
         }
-        .card:hover .description {
+        .card:hover .paragraph {
           transform: translateY(0);
         }
       }
