--- a/css/styles.scss
+++ b/css/styles.scss
@@ -380,7 +380,7 @@ body {
             overflow: hidden;
 
 
-            .paragraph {
+            p {
                 position: absolute;
                 width: 100%;
                 height: 100%;
