--- a/css/styles.css
+++ b/css/styles.css
@@ -321,7 +321,7 @@ body img {
   position: relative;
   overflow: hidden;
 }
-.main .portfolio-section .container .list .card .box p {
+.main .portfolio-section .container .list .card .box .paragraph {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -352,7 +352,7 @@ body img {
   text-align: left;
   margin-bottom: 8px;
 }
-.main .portfolio-section .container .list .card .container .paragraph {
+.main .portfolio-section .container .list .card .container .description {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
