--- a/css/styles.scss
+++ b/css/styles.scss
@@ -380,7 +380,7 @@ body {
             overflow: hidden;
 
 
-            p {
+            .paragraph {
                 position: absolute;
                 width: 100%;
                 height: 100%;
@@ -414,7 +414,7 @@ body {
               margin-bottom: 8px;
             }
 
-            .paragraph {
+            .description {
               font-size: 16px;
               line-height: 1.5;
               letter-spacing: 0.02em;
