--- a/css/styles.scss
+++ b/css/styles.scss
@@ -93,7 +93,7 @@ body {
           height: 4px;
           background-color: #404BBF;
           left:0;
-          bottom: 0;
+          bottom: -1px;
           border-radius: 2px;
           transition: width 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
